--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -8,6 +8,7 @@ sourceSets {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
 }
 
 sourceCompatibility = "1.7"
