--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -17,7 +17,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "API_REST_URL", '"https://api.github.com"'
-        buildConfigField "Integer", "API_REST_TIMEOUT", '25'
+        buildConfigField "Long", "API_REST_TIMEOUT", '25L'
     }
 
     buildTypes {
