--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -54,6 +54,10 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.14.1'
     implementation 'com.google.dagger:dagger:2.14.1'
 
+    implementation "org.koin:koin-core:2.0.1"
+    implementation "org.koin:koin-android:2.0.1"
+    implementation "org.koin:koin-android-viewmodel:2.0.1"
+
     implementation ("com.github.bumptech.glide:glide:4.7.1") {
         exclude group: "com.android.support"
     }
